# ser_utils

./: .gitignore  LICENSE  README.md  hdimm_schedule.esl  pyproject.toml  setup.cfg  timdimm_env.yml  timdimm_schedule.esl  timdimm_sim_test_schedule.esl
notebooks/: catalog.ipynb  dbus_dev.ipynb  dev.ipynb  dimm_dev.ipynb  ekos_dev.ipynb  fass_dev.ipynb  hdimm_dev.ipynb  sdbus_dev.ipynb  wx.ipynb
scripts/: ekos  grab_ser_movie
scripts/ekos/: close.py  connect.py  move_ccw.py  park.py
scripts/ekos_hdimm/: postcapture.py  postjob.py  prejob.py
scripts/ekos_sim/: abort.py  close.py  connect.py  disconnect.py  goto.py  move_ccw.py  move_cw.py  open.py  park.py  postjob.py  prejob.py  shutdown.py  startup.py  status.py  unpark.py
scripts/ekos_timdimm/: abort.py  close.py  move_cw.py  open.py  postcapture.py  postjob.py  prejob.py  shutdown.py  startup.py  status.py  unpark.py  weather_status.py
src/fass/: analyze_cube.py  indi.py  sequence.py  ser.py  vid_capture.py
src/fass/templates/: sequence_template.json
src/timdimm_tng/: analyze_cube.py  indi.py  locations.py  ox_wagon.py  scheduler.py  sequence.py  ser.py  star_list.ecsv  timdimm_gui.py  vid_capture.py
src/timdimm_tng/dbus/: align.py  capture.py  dome.py  ekos.py  indi.py  mount.py  scheduler.py
src/timdimm_tng/templates/: hdimm_schedule_template.esl  hdimm_sequence.esq  sequence_list_template.json  sequence_template.json  timdimm_sched2.esl  timdimm_schedule.esl  timdimm_schedule_template.esl  timdimm_sequence.esq  timdimm_sequence_template.json  timdimm_sim.esq
src/timdimm_tng/wx/: check_wx.py  (+8 more)
