[metadata]
name = fass
author = T. E. Pickering
author_email = te.pickering@gmail.com
description = Utilities for the MMTO Full Aperture Scintillation Sensor system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MMTObservatory/FASS
project_urls =
    Bug Tracker = https://github.com/MMTObservatory/FASS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    astropy
    pandas
    scipy
    photutils
    matplotlib
    xmltodict
    ipykernel
    ipympl
    scikit-image

[options.packages.find]
where = src

[options.extras_require]
dev =
    notebook
    ipympl

[options.entry_points]
console_scripts =
    vid_capture = fass.vid_capture:main

[tox:tox]
envlist = codestyle

[testenv:codestyle]
deps =
    flake8
skip_install = true
changedir = src
description = check code style with flake8
commands = flake8 fass --count --max-line-length=132
